--- a/app/views/admins/show.slim
+++ b/app/views/admins/show.slim
@@ -13,4 +13,4 @@ h1 Новость дня
   br
   == text_area_tag :description, @our['description']
   p
-  == submit_tag 'Установить'
+  == submit_tag 'Установить', class: 'btn btn-default'
