--- a/app/views/admins/show.slim
+++ b/app/views/admins/show.slim
@@ -1,23 +1,1 @@
-== form_tag do
-  .form-group
-    == label_tag :title, 'Заголовок'
-    == text_field_tag :title, @our['title'],
-      class: 'form-control',
-      required: true
-  .form-group
-    == label_tag :expire, 'Дата окончания'
-    == text_field_tag :expire,
-      (@our['expire'] or Time.new + 1.day).to_date.strftime('%d.%m.%Y'),
-      "data-provide"=> "datepicker",
-      class: 'form-control',
-      required: true
-  .form-group
-    == label_tag :description, 'Аннотация'
-    == text_area_tag :description, @our['description'],
-      class: 'form-control',
-      rows: 5,
-      required: true
-  .form-group
-    button.btn.btn-primary
-      i.fa.fa-save>
-      | Установить
+== render "form"
